--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="google-site-verification" content="c4w64mHjJJ5kv8IwJCoIdbnT0TUAgyr9-SbkauYu2dI" />
 
     <title>{{ page.title }}</title>
     {% include favicon.html %}
