--- a/css/tablet.css
+++ b/css/tablet.css
@@ -74,7 +74,7 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 700px) 
   }
 
   .bg-vision{
-  	background-image:url('../assets/vision-bg-1024.jpg');
+  	background-image:url('../assets/vision-bg.jpg');
   }
 
   .bg-landing.landing-bloc {
@@ -83,5 +83,12 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 700px) 
 
   .bg-business-solutions{
   	background-image:url('../assets/business-solutions-bg-1024.jpg');
+  }
+}
+
+
+@media (min-width: 700px) {
+  .service--plate-l {
+    background-color: rgba(0,107,158,0.8);
   }
 }
