Google search results site link improvents, added organization

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,5 +59,23 @@
     <script src="js/main.es6" type="text/babel"></script>
     <script src="js/jquery.cookie.js"></script>
     <!-- endbuild -->
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Organization",
+      "url": "http://pixelvalue.io",
+       "logo": "http://pixelvalue.io/assets/Logo-static-fixed.svg",
+      "contactPoint": [{
+        "@type": "ContactPoint",
+        "telephone": "+1-250-891-5430",
+        "contactType": "customer service",
+        "areaServed": ["US", "CA"]
+      },{
+        "@type": "ContactPoint",
+        "telephone": "+38-044-232-37-68",
+        "contactType": "customer service"
+      }]
+    }
+    </script>
   </body>
 </html>
