Fixed contact form, and mail addresses added.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,12 +68,15 @@
       "contactPoint": [{
         "@type": "ContactPoint",
         "telephone": "+1-250-891-5430",
-        "contactType": "customer service",
+        "contactType": "sales",
+        "email": "ca.office@pixelvalue.io",
         "areaServed": ["US", "CA"]
       },{
         "@type": "ContactPoint",
         "telephone": "+38-044-232-37-68",
-        "contactType": "customer service"
+        "email": "ua.office@pixelvalue.io",
+        "contactType": "sales",
+        "availableLanguage": ["English", "Ukrainian", "Russian"]
       }]
     }
     </script>
