Fixed backgrounds for large screens
Support for screens with pixel ratio 1

--- a/css/main.css
+++ b/css/main.css
@@ -854,13 +854,7 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 }
 
 
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2)      and (min-width: 1200px),
-only screen and (   min--moz-device-pixel-ratio: 2)      and (min-width: 1200px),
-only screen and (     -o-min-device-pixel-ratio: 2/1)    and (min-width: 1200px),
-only screen and (        min-device-pixel-ratio: 2)      and (min-width: 1200px),
-only screen and (                min-resolution: 192dpi) and (min-width: 1200px),
-only screen and (                min-resolution: 2dppx)  and (min-width: 1200px) {
+@media (min-width: 1200px) {
 
   .bg-web-services.bloc {
   	background-image:url('../assets/web-services-bg.jpg');
