Changes Google maps maker icon to be PixelValue logo, moved location description overloay right to revil google maps controls

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -92,6 +92,9 @@
   right: .5em;
 }
 
+.location-description--cover {
+    margin-right: 40px;
+}
 
 .map-canada, .map-kyiv {
   position: absolute;
